fix: provide reliability and maintainability fixes